# docs/swagger.json
@@ -9,12 +9,12 @@
             "email": "tools@algo7.tools"
         },
         "license": {
-            "name": "GNU GENERAL PUBLIC LICENSE Version 3",
+            "name": "The GNU General Public License v3.0",
             "url": "https://raw.githubusercontent.com/algo7/day-planner-gpt-data-portal/main/LICENSE"
         },
         "version": "1.0"
     },
-    "host": "localhost:3000",
+    "host": "NONE",
     "basePath": "/",
     "paths": {
         "/": {
@@ -40,7 +40,7 @@
                 }
             }
         },
-        "/auth/apikey": {
+        "/apikey": {
             "get": {
                 "description": "Returns a page to get the initial API key. If the initial password has expired, it redirects to the home page.",
                 "consumes": [
@@ -124,7 +124,7 @@
                 }
             }
         },
-        "/emails/gmail": {
+        "/google": {
             "get": {
                 "description": "Retrieves emails from the user's Gmail account.",
                 "consumes": [
@@ -149,44 +149,6 @@
                     },
                     "302": {
                         "description": "Redirect to Google authentication if the access token is missing or invalid",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Unable to retrieve emails due to server error or token retrieval issue",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/emails/outlook": {
-            "get": {
-                "description": "Retrieves emails from the user's Outlook account.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Emails"
-                ],
-                "summary": "Get Outlook Emails",
-                "responses": {
-                    "200": {
-                        "description": "List of Outlook emails",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/outlook.Email"
-                            }
-                        }
-                    },
-                    "302": {
-                        "description": "Redirect to Outlook authentication if the access token is missing or invalid",
                         "schema": {
                             "type": "string"
                         }
@@ -281,6 +243,44 @@
                     },
                     "500": {
                         "description": "Unable to read client secret file or parse it to config",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/outlook": {
+            "get": {
+                "description": "Retrieves emails from the user's Outlook account.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Emails"
+                ],
+                "summary": "Get Outlook Emails",
+                "responses": {
+                    "200": {
+                        "description": "List of Outlook emails",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/outlook.Email"
+                            }
+                        }
+                    },
+                    "302": {
+                        "description": "Redirect to Outlook authentication if the access token is missing or invalid",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Unable to retrieve emails due to server error or token retrieval issue",
                         "schema": {
                             "type": "string"
                         }
